--- a/index.html
+++ b/index.html
@@ -168,4 +168,7 @@
         }
     </script>
 </body>
+<footer>
+    <a href="github.com/BlessingBizum/Student-register">github.com/BlessingBizum/Student-register</a>
+</footer>
 </html>
